Updated gradle to 6.2.2, updated server-core to 0.4.11 & cache-store to 0.1.2

--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ version '0.1'
 
 repositories {
     mavenCentral()
+    maven {
+        url "https://dl.bintray.com/hestia-rsps/Hestia"
+    }
 }
 
 apply from: 'dependencies.gradle'
